@@ -68,6 +68,7 @@ t/data/proto-text-invalid/wrong-close-tag.txt
 t/data/proto-text-invalid/wrong-closing-inner-tag.txt
 t/data/proto-text/nested-s.txt
 t/data/proto-text/scenes-with-titles.txt
+t/data/proto-text/sections-a-href.txt
 t/data/proto-text/sections-and-paras.txt
 t/data/proto-text/sections-p-b-i-comments.txt
 t/data/proto-text/sections-p-b-i.txt
@@ -84,6 +85,7 @@ t/data/proto-text/with-tags-inside-paragraphs.txt
 t/data/xml/dialogue-with-several-paragraphs.xml
 t/data/xml/nested-s.xml
 t/data/xml/scenes-with-titles.xml
+t/data/xml/sections-a-href.xml
 t/data/xml/sections-and-paras.xml
 t/data/xml/sections-p-b-i-comments.xml
 t/data/xml/sections-p-b-i.xml
